<resources>
    <string name="app_name">انبار بیفویز</string>
    <string name="alert_ok">باشه</string>

    <string name="menu_home_page">صفحه نخست</string>
    <string name="menu_warehouse_doc">حواله های انبار</string>
    <string name="menu_warehouse_quantity">موجودی انبار</string>
    <string name="menu_warehouse_barcode">بارکدهای انبار</string>
    <string name="menu_warehouse_handling">انبارگردانی</string>
    <string name="menu_exit">خروج</string>

    <string name="label_mobile">شماره موبایل</string>
    <string name="login_and_send_sms">ورود به سیستم</string>
    <string name="label_password">رمز عبور</string>
    <string name="label_count">تعداد: </string>

    <string name="label_register">ثبت</string>

    <string name="label_warehouse">انبار: </string>
    <string name="label_warehouse_doc_type">نوع حواله: </string>
    <string name="label_warehouse_related_order">شماره سفارش مربوطه: </string>
    <string name="label_source">نام مبدا: </string>
    <string name="label_destination">نام مقصد: </string>
    <string name="label_description">توضیحات: </string>

    <string name="label_position">موقعیت مکانی: </string>
    <string name="label_product_name">نام کالا</string>
</resources>