<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".inventory.activities.WarehouseDocAddActivity"
    style="@style/Drawer">

    <RelativeLayout
        style="@style/DrawerContainer">
        <include layout="@layout/partial_toolbar_back" />

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/toolbar"
            android:id="@+id/panelLogin"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius="@dimen/default_margin"
            app:cardElevation="@dimen/default_elevation"
            style="@style/Form"
            android:layout_marginTop="@dimen/default_margin_2x">

            <LinearLayout
                style="@style/FormGroup">

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_warehouse" />

                <Spinner
                    android:id="@+id/drpWarehouseList"
                    style="@style/FormControl"
                    android:spinnerMode="dropdown"/>

                <RelativeLayout
                    style="@style/Divider" />

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_warehouse_doc_type" />

                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/drpSelectType"
                    style="@style/FormControl" />

                <RelativeLayout
                    style="@style/Divider" />

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_warehouse_related_order" />

                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/txtRelatedOrderId"
                    style="@style/FormControl" />

                <RelativeLayout
                    style="@style/Divider" />

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_source" />

                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/txtSource"
                    style="@style/FormControl" />

                <RelativeLayout
                    style="@style/Divider" />

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_destination" />

                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/txtDestination"
                    style="@style/FormControl" />

                <RelativeLayout
                    style="@style/Divider" />

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_description" />

                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/txtDescription"
                    style="@style/FormControl" />

                <com.befoys.core.persian.PersianButton
                    android:id="@+id/btnLogin"
                    style="@style/Button"
                    android:text="@string/label_register" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_menu"
        style="@style/NavigationDrawer"
        app:itemIconTint="@color/primaryColor"
        app:itemTextColor="@color/primaryColor"
        app:menu="@menu/menu_drawer"
        app:headerLayout="@layout/partial_drawer_header" />
</androidx.drawerlayout.widget.DrawerLayout>