<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".inventory.activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

        <ImageView
            android:id="@+id/imgLogin"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/befoys_logo"
            android:layout_marginBottom="60dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/panelLogin"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardCornerRadius="@dimen/default_margin"
            app:cardElevation="@dimen/default_elevation"
            style="@style/Form">

            <LinearLayout
                style="@style/FormGroup">
                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_mobile" />

                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/txtLoginMobile"
                    style="@style/FormControl"
                    android:inputType="number"
                    android:drawableLeft="@drawable/icon_mobile"/>

                <com.befoys.core.persian.PersianTextView
                    style="@style/FormLabel"
                    android:text="@string/label_password" />
                <com.befoys.core.persian.PersianEditText
                    android:id="@+id/txtLoginPassword"
                    style="@style/FormControl"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/icon_password"/>

                <com.befoys.core.persian.PersianButton
                    android:id="@+id/btnLogin"
                    style="@style/Button"
                    android:text="@string/login_and_send_sms" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>


</RelativeLayout>