<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/panelLogin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/default_margin"
    app:cardElevation="@dimen/default_elevation"
    style="@style/Form">

    <LinearLayout
        style="@style/FormGroup">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgProduct"
                    android:src="@drawable/no_image"
                    android:adjustViewBounds="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>


            <LinearLayout
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="vertical"
                android:paddingRight="@dimen/default_padding"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:layout_height="match_parent">


                <com.befoys.core.persian.PersianTextView
                    android:id="@+id/lblProductName"
                    android:text="@string/label_product_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>

        <com.befoys.core.persian.PersianTextView
            android:text="@string/label_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.befoys.core.persian.PersianTextView
            android:id="@+id/txtCount"
            style="@style/FormControl"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="30dp"
            android:drawableLeft="@drawable/icon_keyboard" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn3"
                    android:text="3"
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn2"
                    android:text="2"
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn1"
                    android:text="1"
                    style="@style/ButtonCalculator" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn6"
                    android:text="6"
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn5"
                    android:text="5"
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn4"
                    android:text="4"
                    style="@style/ButtonCalculator" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn9"
                    android:text="9"
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn8"
                    android:text="8"
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn7"
                    android:text="7"
                    style="@style/ButtonCalculator" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnDot"
                    android:text="."
                    style="@style/ButtonCalculator" />

                <Button
                    android:id="@+id/btn0"
                    android:text="0"
                    style="@style/ButtonCalculator" />

                <RelativeLayout
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    style="@style/ButtonCalculator">

                    <ImageView
                        android:id="@+id/imgBackSpace"
                        android:src="@drawable/icon_back_space"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:gravity="center|center_horizontal|center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.befoys.core.persian.PersianButton
                android:id="@+id/btnRegister"
                style="@style/Button"
                android:text="@string/label_register" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>